# lanchain_tutorials

./: README.md  main.py  pyproject.toml  requirements.txt
chaper1_langchain_models/chatmodels/: GroqChatModel.py  HuggingFaceChatModel.py  LocalChatModel.py
chaper1_langchain_models/embeding_models/: HuggingFaceEmbedings.py  OpenAIEmbedings.py
chaper1_langchain_models/llms/: LLMDemo.py
chapter2_langchain_prompts/: Message-3.py  Message-4.py  PromptExample_Simple_1.py  PromptUI-2.py  Temparature.py  TemplateGenerator.py  chat_prompt_template.py  chatbot.py
chapter3_langchain_parsers/: JsonSchemaBot.py  LocalPyndantic_4.py  Parser1.py  PydanticChatModel-3.py  PydanticExample.py  TypeDictDemo-1.py  TypeDictWithAnnotations_Parser2.py
utils/: EnvLoader.py
